dolphin-deploy-agent/src/yaml/medium/07-jumpserver.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: jumpserver-jms-core
  labels:
    app.kubernetes.io/name: jumpserver
    app.jumpserver.org/name: jms-core
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: web
      protocol: TCP
      name: web
    - port: 8070
      targetPort: ws
      protocol: TCP
      name: ws
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    app.kubernetes.io/name: jumpserver
    app.jumpserver.org/name: jms-core
---
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: jumpserver-jms-koko
  labels:
    app.kubernetes.io/name: jumpserver
    app.jumpserver.org/name: jms-koko
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: web
      protocol: TCP
      name: web
    - port: 2222
      targetPort: ssh
      protocol: TCP
      name: ssh
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    app.kubernetes.io/name: jumpserver
    app.jumpserver.org/name: jms-koko
---
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: jumpserver-jms-lion
  labels:
    app.kubernetes.io/name: jumpserver
    app.jumpserver.org/name: jms-lion
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: web
      protocol: TCP
      name: web
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    app.kubernetes.io/name: jumpserver
    app.jumpserver.org/name: jms-lion
---
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: jumpserver-jms-web
  labels:
    app.kubernetes.io/name: jumpserver
    app.jumpserver.org/name: jms-web
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: web
      protocol: TCP
      name: web
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    app.kubernetes.io/name: jumpserver
    app.jumpserver.org/name: jms-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: jumpserver-jms-celery
  labels:
    app.jumpserver.org/name: jms-celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jumpserver
      app.jumpserver.org/name: jms-core
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jumpserver
        app.jumpserver.org/name: jms-core
    spec:
      serviceAccountName: default
      containers:
        - name: jms-celery
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/jumpserver-core:v1
          imagePullPolicy: IfNotPresent
          args: ["start", "task"]
          livenessProbe:
            exec:
              command:
                - /bin/bash
                - /opt/jumpserver/utils/check_celery.sh
          resources:
            {}
          volumeMounts:
            - mountPath: "/opt/jumpserver/configur.yml"
              name: "jms-core-configur"
              subPath: "configur.yml"
            - mountPath: "/opt/jumpserver/data"
              name: "jms-core-data"
              subPath: jmsCoreData
            - mountPath: "/opt/jumpserver/logs"
              name: "jms-core-logs"
              subPath: jmsCoreLogs
      restartPolicy: Always
      volumes:
        - configMap:
            name: 'jumpserver-jms-core'
          name: "jms-core-configur"
        - persistentVolumeClaim:
            claimName: dolphin-master-service
          name: "jms-core-data"
        - persistentVolumeClaim:
            claimName: dolphin-slave-service
          name: "jms-core-logs"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: jumpserver-jms-core
  labels:
    app.kubernetes.io/name: jumpserver
    app.jumpserver.org/name: jms-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jumpserver
      app.jumpserver.org/name: jms-core
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jumpserver
        app.jumpserver.org/name: jms-core
    spec:
      serviceAccountName: default
      containers:
        - name: jms-core
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/jumpserver-core:v1
          imagePullPolicy: IfNotPresent
          args: ["start", "web"]
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
            - name: ws
              containerPort: 8070
              protocol: TCP
          livenessProbe:
            failureThreshold: 30
            httpGet:
              path: /api/health/
              port: web
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /api/health/
              port: web
          resources:
            {}
          volumeMounts:
            - mountPath: "/opt/jumpserver/configur.yml"
              name: "jms-core-configur"
              subPath: "configur.yml"
            - mountPath: "/opt/jumpserver/data"
              name: "jms-core-data"
              subPath: jmsCoreData
            - mountPath: "/opt/jumpserver/logs"
              name: "jms-core-logs"
              subPath: jmsCoreLogs
      restartPolicy: Always
      volumes:
        - configMap:
            name: 'jumpserver-jms-core'
          name: "jms-core-configur"
        - persistentVolumeClaim:
            claimName: dolphin-master-service
          name: "jms-core-data"
        - persistentVolumeClaim:
            claimName: dolphin-slave-service
          name: "jms-core-logs"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: jumpserver-jms-koko
  labels:
    app.kubernetes.io/name: jumpserver
    app.jumpserver.org/name: jms-koko
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jumpserver
      app.jumpserver.org/name: jms-koko
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jumpserver
        app.jumpserver.org/name: jms-koko
    spec:
      serviceAccountName: default
      containers:
        - name: jms-koko
          securityContext:
            privileged: true
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/jumpserver-koko:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 5000
              protocol: TCP
            - name: ssh
              containerPort: 2222
              protocol: TCP
          livenessProbe:
            failureThreshold: 30
            httpGet:
              path: /koko/health/
              port: web
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /koko/health/
              port: web
          resources:
            {}
          volumeMounts:
            - mountPath: "/opt/koko/data"
              name: "jms-koko-data"
              subPath: "jms-koko-data"
      restartPolicy: Always
      volumes:
        - persistentVolumeClaim:
            claimName: dolphin-share-service
          name: "jms-koko-data"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: jumpserver-jms-lion
  labels:
    app.kubernetes.io/name: jumpserver
    app.jumpserver.org/name: jms-lion
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jumpserver
      app.jumpserver.org/name: jms-lion
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jumpserver
        app.jumpserver.org/name: jms-lion
    spec:
      serviceAccountName: default
      containers:
        - name: jms-lion
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/jumpserver-lion:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            failureThreshold: 30
            httpGet:
              path: /lion/health/
              port: web
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /lion/health/
              port: web
          resources:
            {}
          volumeMounts:
            - mountPath: "/opt/lion/data"
              name: "jms-lion-data"
              subPath: "jms-lion-data"
      restartPolicy: Always
      volumes:
        - persistentVolumeClaim:
            claimName: dolphin-share-service
          name: "jms-lion-data"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: jumpserver-jms-web
  labels:
    app.kubernetes.io/name: jumpserver
    app.jumpserver.org/name: jms-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jumpserver
      app.jumpserver.org/name: jms-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jumpserver
        app.jumpserver.org/name: jms-web
    spec:
      serviceAccountName: default
      containers:
        - name: jms-web
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/jumpserver-web:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
          livenessProbe:
            failureThreshold: 30
            httpGet:
              path: /api/health/
              port: web
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /api/health/
              port: web
          resources:
            {}
          volumeMounts:
            - mountPath: "/etc/nginx/sites-enabled/jumpserver.conf"
              name: "jms-web-configur"
              subPath: "default.conf"
            - mountPath: "/opt/jumpserver/data"
              name: "jms-core-data"
              subPath: 'jmsCoreData'
            - mountPath: "/var/log/web"
              name: "jms-web-logs"
              subPath: 'jmsWebLogs'
      restartPolicy: Always
      volumes:
        - configMap:
            name: 'jumpserver-jms-web'
          name: "jms-web-configur"
        - persistentVolumeClaim:
            claimName: 'dolphin-master-service'
          name: "jms-core-data"
        - persistentVolumeClaim:
            claimName: 'dolphin-slave-service'
          name: "jms-web-logs"
