dolphin-deploy-agent/src/yaml/medium/18-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dolphin-agent-service
  namespace: devops
  labels:
    app: dolphin-agent-service
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: dolphin-agent-service
  template:
    metadata:
      labels:
        app: dolphin-agent-service
    spec:
      containers:
        - name: dolphin-agent-service
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/dolphin-agent-service:v1
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 0.5
              memory: 512Mi
          volumeMounts:
            - name: command-docker
              mountPath: /usr/local/bin/docker
            - name: command-docker-lock
              mountPath: /var/run/docker.sock
      volumes:
        - name: command-docker
          hostPath:
            path: /usr/bin/docker
        - name: command-docker-lock
          hostPath:
            path: /var/run/docker.sock
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dolphin-agent-service
  name: dolphin-agent-service
  namespace: devops
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: dolphin-agent-service
  type: ClusterIP
